--- a/Content-management-frontend/package.json
+++ b/Content-management-frontend/package.json
@@ -10,13 +10,16 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.6",
     "@reduxjs/toolkit": "^2.2.0",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-tag-input": "^6.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
